Fix font size in contact section on mobile.

--- a/css/mews.css
+++ b/css/mews.css
@@ -205,7 +205,7 @@ nav li:last-child a {
 }
 
 @media (max-width: 767px) {
-  .contact a.small-text {
+  .contact a.mobile-small-text {
     font-size: 14px;
   }
 }
